@@ -81,10 +81,12 @@ class UserMailer < ActionMailer::Base
     @recipient = recipient
     due_today = "#{recipient.all_deliverable_stickies_due_today.size} " + (recipient.all_deliverable_stickies_due_today.size == 1 ? 'Sticky' : 'Stickies') + " Due Today"
     past_due = "#{recipient.all_deliverable_stickies_past_due.size} " + (recipient.all_deliverable_stickies_past_due.size == 1 ? 'Sticky' : 'Stickies') + " Past Due"
+    due_upcoming = "#{recipient.all_deliverable_stickies_due_upcoming.size} " + (recipient.all_deliverable_stickies_due_upcoming.size == 1 ? 'Sticky' : 'Stickies') + " Upcoming"
     due_today = nil if recipient.all_deliverable_stickies_due_today.size == 0
     past_due = nil if recipient.all_deliverable_stickies_past_due.size == 0
+    due_upcoming = nil if recipient.all_deliverable_stickies_due_upcoming.size == 0
     mail(to: recipient.email,
-         subject: @subject + [due_today, past_due].compact.join(' and '))
+         subject: @subject + [due_today, past_due, due_upcoming].compact.join(' and '))
   end
 
   protected
