@@ -22,7 +22,7 @@
       <tbody>
         <tr>
           <td><%= text_field_tag 'search', params[:search] %></td>
-          <td><%= select_tag :project_id, options_for_select([['All', nil]] + current_user.all_viewable_projects.order('name').collect{|p| [p.name, p.id]}) %></td>
+          <td><%= select_tag :project_id, options_for_select([['All', nil]] + current_user.all_viewable_projects.order('name').collect{|p| [p.name, p.id]}, params[:project_id]) %></td>
           <td>
             <%= select_tag :owner_id, options_for_select([['All', nil]] + User.current.with_project(current_user.all_viewable_projects.collect{|p| p.id}, true).order('last_name, first_name').collect{|u| [u.reverse_name, u.id]}) %>
             <%= check_box_tag "unnassigned", '1', true %> Include Unnassigned
@@ -41,8 +41,8 @@
       </thead>
       <tbody>
         <tr>
-          <td><%= text_field_tag 'due_date_start_date', '', class: 'datepicker' %></td>
-          <td><%= text_field_tag 'due_date_end_date', '', class: 'datepicker' %></td>
+          <td><%= text_field_tag 'due_date_start_date', params[:due_after], class: 'datepicker' %></td>
+          <td><%= text_field_tag 'due_date_end_date', params[:due_before], class: 'datepicker' %></td>
           <td><table class="blank"><tr><%= render partial: 'stickies/check_box_status' %></tr></table></td>
         </tr>
       </tbody>
