@@ -12,6 +12,12 @@ You have <%= pluralize @recipient.all_deliverable_stickies_past_due.size, 'stick
 <%= @stickies = @recipient.all_deliverable_stickies_past_due; render partial: 'sticky_list' %>
 
 <% end %>
+<% if @recipient.all_deliverable_stickies_due_upcoming.size > 0 %>
+You have <%= pluralize @recipient.all_deliverable_stickies_due_upcoming.size, 'sticky' %> upcoming.
+
+<%= @stickies = @recipient.all_deliverable_stickies_due_upcoming; render partial: 'sticky_list' %>
+
+<% end %>
 View stickies on a calendar here: <%= "#{SITE_URL}/stickies/calendar" %>
 
 Thank you!
