@@ -6,6 +6,7 @@
   * Improved Calendar performance using a combination of caching and AJAX
   * Using Rails 3.2.2 and Contour 0.10.2
   * Stickies in lists can now be removed inline
+  * Daily Stickies Due now also includes stickies due the following day (or the following Monday)
 
 * Bug Fix
   * Viewers can now remove themselves from projects to which they've been added
